--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Multi-Game</string>
+    <string name="text_enter">Enter Number</string>
+    <string name="enter">Enter</string>
+    <string name="replay">Play Again</string>
 </resources>
